[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ["py38"]

[tool.doks]
auto = true

[tool.poetry]
name = "safer"
version = "4.11.0"
description = "🧿 A safer writer for files and streams 🧿"
authors = ["Tom Ritchford <tom@swirly.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
black = "^23.12.0"

[tool.poetry.group.dev.dependencies]
coverage = "*"
flake8 = "*"
pytest = "*"
readme-renderer = "*"
tdir = "*"
toml = "*"
pyyaml = "*"
isort = "*"
ruff = "*"
mypy = "*"

[tool.coverage.run]
branch = true
source = ["safer"]

[tool.coverage.report]
fail_under = "90"
skip_covered = true
exclude_lines = ["pragma: no cover", "if False:", "if __name__ == .__main__.:", "raise NotImplementedError"]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
