[project]
name = "safer"
version = "5.1.0"
description = "🧿 A safer writer for files and streams 🧿"
authors = [{ name = "Tom Ritchford", email = "tom@swirly.com" }]
requires-python = ">=3.8"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/rec/safer"
Repository = "https://github.com/rec/safer"
Documentation = "https://rec.github.io/safer"

[dependency-groups]
dev = [
    "coverage",
    "pytest",
    "readme-renderer",
    "tdir",
    "toml",
    "pyyaml",
    "ruff",
    "mypy",
]

[tool.uv]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.coverage.run]
branch = true
source = ["safer"]

[tool.coverage.report]
fail_under = "90"
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if False:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError"
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"


[tool.mypy]

[tool.doks]
auto = true
